# cuda-wmma-samples

./: .gitignore  CMakeLists.txt  README.md
include/: cudaErrorCheck.hpp  cudaEvent.cuh  cudaTimeCalculator.cuh  devVector.cuh  host.hpp  hostFunc.hpp  kernel.cuh  kernelFunc.cuh  matrixSetting.hpp
src/: checkData.cpp  cudaEvent.cu  cudaTimeCalculator.cu  gemm.cpp  kernel.cu  kernelFunc.cu  main.cu
tmp/: simple.cu
